salesforce/force-app/main/default/objects/Opportunity/fields/Account_Prior_Joined_Opps__c.field-meta.xml
<CustomField>
    <fullName>Account_Prior_Joined_Opps__c</fullName>
    <description>Pass-through from Account.Prior_Joined_Opps__c so list views can filter on it. &gt; 0 means this advisor previously joined Savvy on some prior opp.</description>
    <formula>Account.Prior_Joined_Opps__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Prior Joined Opps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>