salesforce/force-app/main/default/objects/Opportunity/fields/Actual_ARR__c.field-meta.xml
<CustomField>
    <fullName>Actual_ARR__c</fullName>
    <description>The actual ARR of advisor as populated by our Savvy database.</description>
    <inlineHelpText>The actual ARR of advisor as populated by our Savvy database.</inlineHelpText>
    <label>Actual ARR</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>