salesforce/force-app/main/default/objects/Opportunity/fields/Actual_AUM__c.field-meta.xml
<CustomField>
    <fullName>Actual_AUM__c</fullName>
    <description>The actual AUM of the advisor as populated by our Savvy database.</description>
    <inlineHelpText>The actual AUM of the advisor as populated by our Savvy database.</inlineHelpText>
    <label>Actual AUM</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>