salesforce/force-app/main/default/objects/Opportunity/fields/Actual_Margin_AUM__c.field-meta.xml
<CustomField>
    <fullName>Actual_Margin_AUM__c</fullName>
    <description>The actual Margin AUM as based on the actuals in Salesforce</description>
    <formula>Final_Compensation_Margin__c *  Actual_AUM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Margin AUM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>