salesforce/force-app/main/default/objects/Opportunity/fields/Actual_Number_of_Households__c.field-meta.xml
<CustomField>
    <fullName>Actual_Number_of_Households__c</fullName>
    <description>The actual number of households this advisor is supporting populated by our Advisor database.</description>
    <inlineHelpText>The actual number of households this advisor is supporting populated by our Advisor database.</inlineHelpText>
    <label>Actual Number of Households</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>