salesforce/force-app/main/default/objects/Opportunity/fields/Additional_Software__c.field-meta.xml
<CustomField>
    <fullName>Additional_Software__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is there any non-standard software which Savvy agreed to provide for the advisor?</description>
    <inlineHelpText>Is there any non-standard software which Savvy agreed to provide for the advisor?</inlineHelpText>
    <label>Additional Software?</label>
    <type>Checkbox</type>
</CustomField>