salesforce/force-app/main/default/objects/Opportunity/fields/Additional_Software_Costs__c.field-meta.xml
<CustomField>
    <fullName>Additional_Software_Costs__c</fullName>
    <description>The total annual cost of any additional software Savvy agreed to provide for the advisor.</description>
    <inlineHelpText>The total annual cost of any additional software Savvy agreed to provide for the advisor.</inlineHelpText>
    <label>Additional Software Costs</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>