salesforce/force-app/main/default/objects/Opportunity/fields/Additional_Software_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Software_Notes__c</fullName>
    <description>A description of the additional software agreed to be provided by Savvy.</description>
    <label>Additional Software Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>