salesforce/force-app/main/default/objects/Opportunity/fields/Advisor_Client_SFDC_ID__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Client_SFDC_ID__c</fullName>
    <description>The advisors Salesforce ID in the Client-Advisor Salesforce.</description>
    <label>Advisor Client SFDC ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>