salesforce/force-app/main/default/objects/Opportunity/fields/Advisor_Interests__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Interests__c</fullName>
    <description>The advisor interests which will be used for personalized direct mail on re-engagement opportunities.</description>
    <inlineHelpText>Enter the advisor&apos;s interests. We use this to personalize future direct mail.</inlineHelpText>
    <label>Advisor Interests</label>
    <length>255</length>
    <type>Text</type>
</CustomField>