salesforce/force-app/main/default/objects/Opportunity/fields/Advisor_Join_Date__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Join_Date__c</fullName>
    <description>The official date the advisor joined Savvy. Used for comp calculation, historical tracking, and other purposes.</description>
    <inlineHelpText>The official date the advisor joined Savvy.</inlineHelpText>
    <label>Advisor Join Date</label>
    <type>Date</type>
</CustomField>