salesforce/force-app/main/default/objects/Opportunity/fields/Advisor_Notes_Doc__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Notes_Doc__c</fullName>
    <description>The URL to the Advisor Notes Doc in Google</description>
    <label>Advisor Notes Doc</label>
    <type>Url</type>
</CustomField>