salesforce/force-app/main/default/objects/Opportunity/fields/Advisor_Offer_Calculator_URL__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Offer_Calculator_URL__c</fullName>
    <description>The URL to the advisor offer calculator.</description>
    <label>Advisor Offer Calculator URL</label>
    <type>Url</type>
</CustomField>