salesforce/force-app/main/default/objects/Opportunity/fields/Advisor_Split__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Split__c</fullName>
    <description>Base revenue share percentage — Tier 1 of the advisor&apos;s split grid.</description>
    <inlineHelpText>Base revenue share percentage — Tier 1 of the advisor&apos;s split grid.</inlineHelpText>
    <label>Tier 1 Split</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>