salesforce/force-app/main/default/objects/Opportunity/fields/Average_AUM_at_Firm__c.field-meta.xml
<CustomField>
    <fullName>Average_AUM_at_Firm__c</fullName>
    <description>The Average AUM at the firm as based on Discovery Data or other publicly available data.</description>
    <inlineHelpText>The Average AUM at the firm as based on Discovery Data or other publicly available data.</inlineHelpText>
    <label>Average AUM at Firm</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>