salesforce/force-app/main/default/objects/Opportunity/fields/Broker_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Broker_Protocol__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this firm/advisor currently part of Broker Protocol?</description>
    <inlineHelpText>Is this firm/advisor currently part of Broker Protocol?</inlineHelpText>
    <label>Broker Protocol?</label>
    <type>Checkbox</type>
</CustomField>