salesforce/force-app/main/default/objects/Opportunity/fields/Broker_Protocol_Notes__c.field-meta.xml
<CustomField>
    <fullName>Broker_Protocol_Notes__c</fullName>
    <description>Are there any notes related to their existing firm&apos;s participation in Broker Protocol?</description>
    <inlineHelpText>Are there any notes related to their existing firm&apos;s participation in Broker Protocol?</inlineHelpText>
    <label>Broker Protocol Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>