salesforce/force-app/main/default/objects/Opportunity/fields/City_State__c.field-meta.xml
<CustomField>
    <fullName>City_State__c</fullName>
    <formula>Account.BillingCity &amp; &quot;, &quot; &amp;  Account.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City &amp; State</label>
    <type>Text</type>
</CustomField>