salesforce/force-app/main/default/objects/Opportunity/fields/Closed_Joined_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Joined_Date__c</fullName>
    <formula>CASE(StageName,&quot;Joined&quot;,Advisor_Join_Date__c,&quot;Closed Lost&quot;,DATEVALUE(Stage_Entered_Closed__c),Advisor_Join_Date__c)</formula>
    <label>Closed + Joined Date</label>
    <type>Date</type>
</CustomField>