salesforce/force-app/main/default/objects/Opportunity/fields/Closed_Lost_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is required to mark the opportunity closed lost. It isn&apos;t visible to the user, it is marked as true by the Closed Lost Opportunity flow.</description>
    <label>Closed Lost Checkbox</label>
    <type>Checkbox</type>
</CustomField>