salesforce/force-app/main/default/objects/Opportunity/fields/Closed_Lost_Details__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Details__c</fullName>
    <description>Additional details around the closing of an opportunity.</description>
    <inlineHelpText>Additional details around the closing of an opportunity.</inlineHelpText>
    <label>Closed Lost Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>