salesforce/force-app/main/default/objects/Opportunity/fields/Computer_Type__c.field-meta.xml
<CustomField>
    <fullName>Computer_Type__c</fullName>
    <description>The computer type the advisor would like.</description>
    <inlineHelpText>The computer type the advisor would like.</inlineHelpText>
    <label>Computer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Advisor_Computer_Type</valueSetName>
    </valueSet>
</CustomField>