salesforce/force-app/main/default/objects/Opportunity/fields/Contract_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Effective_Date__c</fullName>
    <description>The effective date stated in the signed contract. May differ from Advisor Join Date.</description>
    <inlineHelpText>The effective date stated in the signed contract. May differ from Advisor Join Date.</inlineHelpText>
    <label>Contract Effective Date</label>
    <type>Date</type>
</CustomField>