salesforce/force-app/main/default/objects/Opportunity/fields/Conversion_Channel__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Channel__c</fullName>
    <label>Conversion Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Conversion_Channel</valueSetName>
    </valueSet>
</CustomField>