salesforce/force-app/main/default/objects/Opportunity/fields/Count_SQO__c.field-meta.xml
<CustomField>
    <fullName>Count_SQO__c</fullName>
    <formula>CASE(SQL__c,&quot;Yes&quot;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of SQO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>