salesforce/force-app/main/default/objects/Opportunity/fields/Create_Re_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Create_Re_Engagement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to trigger bulk creation of a Re-Engagement opportunity from this Recruiting opportunity. The checkbox will automatically reset to false once the Re-Engagement opportunity has been created.</description>
    <label>Create Re-Engagement</label>
    <type>Checkbox</type>
</CustomField>