salesforce/force-app/main/default/objects/Opportunity/fields/Created_Recruiting_Opportunity_ID__c.field-meta.xml
<CustomField>
    <fullName>Created_Recruiting_Opportunity_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the Re-Engagement opportunity to the new Recruiting opportunity it created</description>
    <label>Created Recruiting Opportunity ID</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Source Re-Engagement Opportunity</relationshipLabel>
    <relationshipName>Source_Re_Engagement_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>