salesforce/force-app/main/default/objects/Opportunity/fields/Custodian__c.field-meta.xml
<CustomField>
    <fullName>Custodian__c</fullName>
    <description>The custodian(s) the Prospect is using.</description>
    <label>Custodian</label>
    <length>255</length>
    <type>Text</type>
</CustomField>