salesforce/force-app/main/default/objects/Opportunity/fields/Data_Migration_Committed__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration_Committed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was there a data migration committed as part of this opportunity?</description>
    <inlineHelpText>Was there a data migration committed as part of this opportunity?</inlineHelpText>
    <label>Data Migration Committed</label>
    <type>Checkbox</type>
</CustomField>