salesforce/force-app/main/default/objects/Opportunity/fields/Date_Became_SQO__c.field-meta.xml
<CustomField>
    <fullName>Date_Became_SQO__c</fullName>
    <description>This is an automatically populated date when the SQL is flipped from &quot;&quot; or &quot;No&quot; to &quot;Yes&quot;</description>
    <label>Date Became SQO</label>
    <type>DateTime</type>
</CustomField>