salesforce/force-app/main/default/objects/Opportunity/fields/Date_Today__c.field-meta.xml
<CustomField>
    <fullName>Date_Today__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Today</label>
    <type>Date</type>
</CustomField>