salesforce/force-app/main/default/objects/Opportunity/fields/Days_Since_Closed_Lost__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Closed_Lost__c</fullName>
    <description>Number of days since this advisor was most recently marked Closed Lost (across all opps including Re-Engagement). Uses Account.Most_Recent_Closed_Date__c rollup (MAX Stage_Entered_Closed__c across all Closed Lost opps). Falls back to the opp&apos;s own Stage_Entered_Closed__c or CloseDate for accounts where the rollup is null (all Stage_Entered_Closed__c values are null on older records).</description>
    <formula>IF(
  ISPICKVAL(StageName, &quot;Closed Lost&quot;),
  TODAY() - DATEVALUE(
    IF(
      NOT(ISBLANK(Account.Most_Recent_Closed_Date__c)),
      Account.Most_Recent_Closed_Date__c,
      IF(
        ISBLANK(Stage_Entered_Closed__c),
        DATETIMEVALUE(TEXT(CloseDate) + &quot; 00:00:00&quot;),
        Stage_Entered_Closed__c
      )
    )
  ),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days since this advisor was most recently closed lost. If the advisor was re-engaged and that also closed lost, this reflects the more recent date.</inlineHelpText>
    <label>Days Since Closed Lost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>