salesforce/force-app/main/default/objects/Opportunity/fields/Dialpad_Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Dialpad_Area_Code__c</fullName>
    <description>The preferred area code of a the new work number for the advisor.</description>
    <inlineHelpText>The preferred area code of a the new work number for the advisor.</inlineHelpText>
    <label>Dialpad Area Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>