salesforce/force-app/main/default/objects/Opportunity/fields/Dover_Candidate_ID__c.field-meta.xml
<CustomField>
    <fullName>Dover_Candidate_ID__c</fullName>
    <description>The dover candidate ID (typically passed on from a Prospect)</description>
    <label>Dover Candidate ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>