salesforce/force-app/main/default/objects/Opportunity/fields/Dover_Channel__c.field-meta.xml
<CustomField>
    <fullName>Dover_Channel__c</fullName>
    <label>Dover Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Dover_Channel</valueSetName>
    </valueSet>
</CustomField>