salesforce/force-app/main/default/objects/Opportunity/fields/Dover_URL__c.field-meta.xml
<CustomField>
    <fullName>Dover_URL__c</fullName>
    <description>The Dover candidate URL</description>
    <label>Dover URL</label>
    <type>Url</type>
</CustomField>