salesforce/force-app/main/default/objects/Opportunity/fields/Draw__c.field-meta.xml
<CustomField>
    <fullName>Draw__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the advisor receive guaranteed draw payments?</description>
    <inlineHelpText>Does the advisor receive guaranteed draw payments?</inlineHelpText>
    <label>Draw Enabled</label>
    <type>Checkbox</type>
</CustomField>