salesforce/force-app/main/default/objects/Opportunity/fields/Draw_Amount_12_Month__c.field-meta.xml
<CustomField>
    <fullName>Draw_Amount_12_Month__c</fullName>
    <description>Total annual draw amount (paid in semi-monthly or monthly installments).</description>
    <inlineHelpText>Total annual draw amount (paid in semi-monthly or monthly installments).</inlineHelpText>
    <label>Draw Annual Amount</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>