salesforce/force-app/main/default/objects/Opportunity/fields/Draw_Duration_Months__c.field-meta.xml
<CustomField>
    <fullName>Draw_Duration_Months__c</fullName>
    <description>How many months does this draw go on for?</description>
    <inlineHelpText>How many months does this draw go on for (if all thresholds are met)?</inlineHelpText>
    <label>Draw Duration (Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>