salesforce/force-app/main/default/objects/Opportunity/fields/Draw_First_Gate__c.field-meta.xml
<CustomField>
    <fullName>Draw_First_Gate__c</fullName>
    <description>Month after effective date by which the first milestone must be reached.</description>
    <inlineHelpText>Month after effective date by which the first milestone must be reached.</inlineHelpText>
    <label>Draw Gate 1 - Month</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>