salesforce/force-app/main/default/objects/Opportunity/fields/Draw_Gate_1_ARR__c.field-meta.xml
<CustomField>
    <fullName>Draw_Gate_1_ARR__c</fullName>
    <description>Annualized ARR the advisor must reach by the Gate 1 month to continue receiving draw payments.</description>
    <inlineHelpText>Annualized ARR the advisor must reach by the Gate 1 month to continue receiving draw payments.</inlineHelpText>
    <label>Draw Gate 1 - ARR</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>