salesforce/force-app/main/default/objects/Opportunity/fields/Draw_Gate_2_ARR__c.field-meta.xml
<CustomField>
    <fullName>Draw_Gate_2_ARR__c</fullName>
    <description>Annualized ARR the advisor must reach by the Gate 2 month.</description>
    <inlineHelpText>Annualized ARR the advisor must reach by the Gate 2 month.</inlineHelpText>
    <label>Draw Gate 2 - ARR</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>