salesforce/force-app/main/default/objects/Opportunity/fields/Draw_Notes__c.field-meta.xml
<CustomField>
    <fullName>Draw_Notes__c</fullName>
    <description>Are there any other notes which we should be tracking about this draw?</description>
    <label>Draw Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>