salesforce/force-app/main/default/objects/Opportunity/fields/Draw_Offset_From_Split__c.field-meta.xml
<CustomField>
    <fullName>Draw_Offset_From_Split__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the draw deducted from the advisor&apos;s percentage payments? If yes, the advisor receives the greater of draw or split (draw is an advance).</description>
    <inlineHelpText>Is the draw deducted from the advisor&apos;s percentage payments? If yes, the advisor receives the greater of draw or split (draw is an advance).</inlineHelpText>
    <label>Draw Offset from Split</label>
    <type>Checkbox</type>
</CustomField>