salesforce/force-app/main/default/objects/Opportunity/fields/Draw_Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Draw_Payment_Frequency__c</fullName>
    <description>How often draw payments are made.</description>
    <inlineHelpText>How often draw payments are made. Values: Semi-Monthly, Monthly.</inlineHelpText>
    <label>Draw Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Semi-Monthly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>