salesforce/force-app/main/default/objects/Opportunity/fields/Draw_Repayment_On_Termination__c.field-meta.xml
<CustomField>
    <fullName>Draw_Repayment_On_Termination__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the advisor terminates, must they repay any draw amounts that exceeded their earned percentage payments?</description>
    <inlineHelpText>If the advisor terminates, must they repay any draw amounts that exceeded their earned percentage payments?</inlineHelpText>
    <label>Draw Repayment on Termination</label>
    <type>Checkbox</type>
</CustomField>