salesforce/force-app/main/default/objects/Opportunity/fields/Dustin_Invisible__c.field-meta.xml
<CustomField>
    <fullName>Dustin_Invisible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opportunities which we do not want Dustin Parson&apos;s to have visibility to.</description>
    <label>Dustin Invisible</label>
    <type>Checkbox</type>
</CustomField>