salesforce/force-app/main/default/objects/Opportunity/fields/Earliest_Anticipated_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Anticipated_Start_Date__c</fullName>
    <description>The earliest date the advisor could join if they were to start. This is used as a heads up for the Ops team and not for forecasting.</description>
    <inlineHelpText>The earliest date the advisor could join if they were to start. This is used as a heads up for the Ops team and not for forecasting.</inlineHelpText>
    <label>Earliest Anticipated Start Date</label>
    <type>Date</type>
</CustomField>