salesforce/force-app/main/default/objects/Opportunity/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <description>The employment type of the advisor (1099 or W-2)</description>
    <inlineHelpText>The employment type of the advisor (1099 or W-2)</inlineHelpText>
    <label>Employment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X1099_or_W2</valueSetName>
    </valueSet>
</CustomField>