salesforce/force-app/main/default/objects/Opportunity/fields/Envelope_ID__c.field-meta.xml
<CustomField>
    <fullName>Envelope_ID__c</fullName>
    <description>The envelope ID from the signed contract (DocuSign or PandaDoc) for traceability.</description>
    <inlineHelpText>The envelope ID from the signed contract (DocuSign or PandaDoc) for traceability.</inlineHelpText>
    <label>Envelope ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>