salesforce/force-app/main/default/objects/Opportunity/fields/Equity_Grant_2__c.field-meta.xml
<CustomField>
    <fullName>Equity_Grant_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the advisor receive a second equity grant?</description>
    <inlineHelpText>Does the advisor receive a second equity grant?</inlineHelpText>
    <label>Equity Grant 2?</label>
    <type>Checkbox</type>
</CustomField>