salesforce/force-app/main/default/objects/Opportunity/fields/Equity_Grant_3__c.field-meta.xml
<CustomField>
    <fullName>Equity_Grant_3__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the advisor receive a third equity grant?</description>
    <inlineHelpText>Does the advisor receive a third equity grant?</inlineHelpText>
    <label>Equity Grant 3?</label>
    <type>Checkbox</type>
</CustomField>