salesforce/force-app/main/default/objects/Opportunity/fields/Equity_Grant_3_ARR_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Equity_Grant_3_ARR_Threshold__c</fullName>
    <description>Annualized ARR required to unlock the third equity grant.</description>
    <inlineHelpText>Annualized ARR required to unlock the third equity grant.</inlineHelpText>
    <label>Equity Grant 3 - ARR Threshold</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>