salesforce/force-app/main/default/objects/Opportunity/fields/Equity_Grant_4__c.field-meta.xml
<CustomField>
    <fullName>Equity_Grant_4__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the advisor receive a fourth equity grant?</description>
    <inlineHelpText>Does the advisor receive a fourth equity grant?</inlineHelpText>
    <label>Equity Grant 4?</label>
    <type>Checkbox</type>
</CustomField>