salesforce/force-app/main/default/objects/Opportunity/fields/Equity_Grant_4_ARR_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Equity_Grant_4_ARR_Threshold__c</fullName>
    <description>Annualized ARR required to unlock the fourth equity grant.</description>
    <inlineHelpText>Annualized ARR required to unlock the fourth equity grant.</inlineHelpText>
    <label>Equity Grant 4 - ARR Threshold</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>