salesforce/force-app/main/default/objects/Opportunity/fields/Equity_Grant_4_Value__c.field-meta.xml
<CustomField>
    <fullName>Equity_Grant_4_Value__c</fullName>
    <description>Dollar value of the fourth equity grant.</description>
    <inlineHelpText>Dollar value of the fourth equity grant.</inlineHelpText>
    <label>Equity Grant 4 - Value</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>