salesforce/force-app/main/default/objects/Opportunity/fields/Equity_Kicker__c.field-meta.xml
<CustomField>
    <fullName>Equity_Kicker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the advisor receive an equity (stock option) grant?</description>
    <inlineHelpText>Does the advisor receive an equity (stock option) grant?</inlineHelpText>
    <label>Equity Grant 1?</label>
    <type>Checkbox</type>
</CustomField>