salesforce/force-app/main/default/objects/Opportunity/fields/Equity_Kicker_ARR_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Equity_Kicker_ARR_Minimum__c</fullName>
    <description>Annualized ARR required to unlock the first equity grant.</description>
    <inlineHelpText>Annualized ARR required to unlock the first equity grant.</inlineHelpText>
    <label>Equity Grant 1 - ARR Threshold</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>