salesforce/force-app/main/default/objects/Opportunity/fields/Equity_Kicker_Notes__c.field-meta.xml
<CustomField>
    <fullName>Equity_Kicker_Notes__c</fullName>
    <description>Details about all equity grants, vesting schedules, and special conditions.</description>
    <inlineHelpText>Details about all equity grants, vesting schedules, and special conditions.</inlineHelpText>
    <label>Equity Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>