salesforce/force-app/main/default/objects/Opportunity/fields/Equity_Kicker_Value__c.field-meta.xml
<CustomField>
    <fullName>Equity_Kicker_Value__c</fullName>
    <description>Dollar value of the first equity grant.</description>
    <inlineHelpText>Dollar value of the first equity grant.</inlineHelpText>
    <label>Equity Grant 1 - Value</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>