salesforce/force-app/main/default/objects/Opportunity/fields/Equity_Vesting_Duration_Months__c.field-meta.xml
<CustomField>
    <fullName>Equity_Vesting_Duration_Months__c</fullName>
    <description>Total vesting period for equity grants in months (typically 48 or 60).</description>
    <inlineHelpText>Total vesting period for equity grants in months (typically 48 or 60).</inlineHelpText>
    <label>Equity Vesting Duration (Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>