salesforce/force-app/main/default/objects/Opportunity/fields/Estimated_Average_Client_Fee__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Average_Client_Fee__c</fullName>
    <defaultValue>0.0085</defaultValue>
    <description>The estimated or stated client fee for this advisor. Default is 0.85% if nothing is provided.</description>
    <inlineHelpText>The estimated or stated client fee for this advisor. Default is 0.85% if nothing is provided.</inlineHelpText>
    <label>Estimated Average Client Fee</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>