salesforce/force-app/main/default/objects/Opportunity/fields/Estimated_Number_of_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Number_of_Accounts__c</fullName>
    <description>The estimated number of accounts the advisor is going to be moving over.</description>
    <inlineHelpText>The estimated number of accounts the advisor is going to be moving over.</inlineHelpText>
    <label>Estimated Number of Accounts</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>