salesforce/force-app/main/default/objects/Opportunity/fields/Expected_AUM__c.field-meta.xml
<CustomField>
    <fullName>Expected_AUM__c</fullName>
    <description>The AUM expected from a joined advisor, as reforecast by the Ops Team.</description>
    <inlineHelpText>The AUM expected from a joined advisor, as reforecast by the Ops Team.</inlineHelpText>
    <label>Expected AUM</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>